# medibot

./: .vercelignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py  store_index.py  template.sh  test.py
.github/workflows/: cicd.yaml
.refact/buddy/: memory_ops.jsonl  runtime_queue.jsonl  state.json
.refact/buddy/chats/workflows/: buddy_architecture_drift_watcher.json  buddy_dependency_radar.json  buddy_docs_gardener.json  buddy_idle_suggester.json  buddy_pr_issue_matchmaker.json  buddy_security_whisperer.json  buddy_setup_coach.json  refact_self_critic.json
src/: helper.py  prompt.py
static/: style.css
templates/: chatbot.html
