[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medibot"
version = "0.1.0"
description = "Medical Chatbot"
readme = "README.md"
requires-python = ">=3.9, <3.13"
dependencies = [
    "langchain==0.3.26",
    "flask==3.1.1",
    "pypdf==5.6.1",
    "python-dotenv==1.1.0",
    "langchain-pinecone==0.2.8",
    "langchain-community==0.3.26",
    "langchain-ollama",
    "pinecone",
    "gunicorn",
]
